--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -709,7 +709,13 @@
             "FPS": "FPS",
             "Headline": "Webcam",
             "NoWebcam": "No webcam available. Add a webcam under \"Interface Settings\" -> \"Webcams\".",
-            "UnknownWebcamService": "Unknown Webcam Service"
+            "UnknownWebcamService": "Unknown Webcam Service",
+            "NozzleCalibrationOverlayZoom1X": "1X",
+            "NozzleCalibrationOverlayZoom2X": "2X",
+            "NozzleCalibrationOverlayZoomMAX": "MAX",
+            "NozzleCalibrationOverlaySet": "SET",
+            "NozzleCalibrationOverlayMove": "MOVE",
+            "NozzleCalibrationOverlayZProbe": "Z-PROBE"
         },
         "ZoffsetPanel": {
             "Clear": "Clear",
@@ -1132,7 +1138,12 @@
             "Vertically": "vertically",
             "Webcams": "Webcams",
             "WebrtcCameraStreamer": "WebRTC (camera-streamer)",
-            "WebrtcMediaMTX": "WebRTC (MediaMTX / rtsp-simple-server)"
+            "WebrtcMediaMTX": "WebRTC (MediaMTX / rtsp-simple-server)",
+            "EnableNozzleCalibrationOverlay": "Visual assisted offset calibration",
+            "PixelPerMM": "Pixel per MM",
+            "FlipNozzle": "Flip drag and drop direction:",
+            "FlipNozzleHorizontally": "horizontally",
+            "FlipNozzleVertically": "vertically"
         }
     },
     "ScrewsTiltAdjust": {
